--- a/public/js/components/blog/blogItem/blogItem.html
+++ b/public/js/components/blog/blogItem/blogItem.html
@@ -6,9 +6,15 @@
         <!-- In general if it's not editable it's when this component is used in the blogList component -->
         <div class="card-content">
             <!-- Display datepicker -->
-            <datepicker style="width: 250px;" date-format="yyyy-MM-dd" date-week-start-day="1">
-                <input placeholder="Date" class="datepicker" ng-model="date" type="text"/>
-            </datepicker>
+            
+                <span ng-if="$ctrl.post.date && (!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
+                Publié le :  {{$ctrl.post.date}}
+                </span>
+                
+                <datepicker style="width: 250px;" date-format="yyyy-MM-dd" date-week-start-day="1" ng-if="($ctrl.editable && $ctrl.editMode)" >
+                    <input placeholder="Date" class="datepicker" ng-model="$ctrl.post.date" type="text"/>
+                </datepicker>
+            
             <!-- Display post.title if this component is not editable or editable and not in edit mode -->
             <span class="card-title" ng-if="(!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
               {{$ctrl.post.title}}
@@ -21,6 +27,16 @@
             </div>
             <!-- Display textarea for editing post.content only if editable and in edit mode -->
             <textarea class="materialize-textarea" ng-if="($ctrl.editable && $ctrl.editMode)" ng-model="$ctrl.post.content" placeholder="Content"></textarea>
+             <!-- Switch -->
+             <span ng-if="$ctrl.post.date && (!$ctrl.editable || ($ctrl.editable && !$ctrl.editMode))">
+            </span>
+            <div class="switch" ng-if="($ctrl.editable && $ctrl.editMode)">
+                <label>
+                    <input type="checkbox" ng-model="$ctrl.post.published">
+                    <span class="lever"></span>
+                    Publier
+                </label>
+            </div>
         </div>
 
         <div class="card-action">
@@ -29,13 +45,6 @@
             <!-- Display this link, only if it's editable and not in edit mode, to change state to app.blog.list (go back) -->
             <a ng-if="$ctrl.editable && !$ctrl.editMode" ui-sref="blog.list">Close</a>
             <!-- Display these links, only if it's in edit mode  -->
-
-
-
-
-
-
-
 
             <a ng-if="$ctrl.editMode" ng-click="$ctrl.undo()" class="waves-effect"><i class="material-icons">undo</i></a>
             <a ng-if="$ctrl.editMode" ng-click="$ctrl.save()" class="waves-effect"><i class="material-icons">done</i></a>
